--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+  "node": ">=20.16.0"
+},
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "lodash": "^4.17.21",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2"
   }
 }
